<resources>
    <string name="app_name">"即乐商户端"</string>

    <string name="permission_rationale">需要权限来展示访问。</string>
    <string name="permissions_not_granted">请前往设置授予权限。</string>
    <!--Drawer-->
    <string name="nav_recommend">"发现"</string>
    <string name="nav_store_info">"店铺管理"</string>
    <string name="more">"更多"</string>
    <string name="nav_setting">设置</string>
    <string name="nav_share">"分享"</string>
    <string name="nav_send">"反馈"</string>
    <string name="nav_reboot">"重启"</string>

    <string name="reboot">"确认重启后音乐播放盒启动需要1-3分钟。\n重启后会从播放列表第一首歌曲开始播放。"</string>

    <!--Loading-->
    <string name="loading_error_message">"加载出错了，请稍后再试"</string>
    <string name="loading_successful_message">"加载完成"</string>
    <string name="no_more_message">"没有更多。"</string>

    <!--Login-->
    <string name="login_label">"登录"</string>
    <string name="hint_user_name">"请输入用户名"</string>
    <string name="hint_password">"请输入密码"</string>
    <string name="login_successful_message">"登录成功"</string>
    <string name="login_error_message">"登录失败，请重试"</string>

    <string name="navigation_drawer_open">"打开导航栏"</string>
    <string name="navigation_drawer_close">"关闭导航栏"</string>
    <string name="action_search">"搜索"</string>
    <string name="action_settings">"设置"</string>
    <string name="action_share">"分享"</string>

    <!--Mine-->
    <string name="my_favorite">"店铺歌单:"</string>
    <string name="my_dynamic">"店铺动态:"</string>
    <string name="default_favorite">"我喜欢"</string>
    <string name="add_playlist">"新建歌单"</string>
    <string name="new_playlist_title">"请输入歌单名称..."</string>
    <string name="added_successful_message">"播放列表已更新。"</string>
    <string name="added_failed_message">"播放列表更新失败。"</string>

    <!--Search-->
    <string-array name="search_page_title">
        <item>"单曲"</item>
        <item>"歌单"</item>
        <item>"专辑"</item>
    </string-array>
    <string name="action_playlist">"添加到播放列表"</string>
    <string name="action_favorite">"加入收藏"</string>
    <string name="action_comment">"查看评论"</string>
    <string name="search_no_result">"没有相关音乐,请换个关键词试试。"</string>

    <!--TabLayout-->
    <string-array name="main_page_title">
        <item>"店铺"</item>
        <item>"播放列表"</item>
        <item>"发现"</item>
    </string-array>

    <!--Comment-->
    <string name="comment_label">"评论"</string>
    <string name="no_comment">"还没有评论"</string>
    <string name="store_comment_description">"店内评论："</string>
    <string name="all_comment_description">"所有评论："</string>

    <!--Audition-->
    <string name="audition_title">"试听"</string>

    <!--MyFavorites-->
    <string name="add_to_favorites">"收藏到歌单"</string>
    <plurals name="song_count">
        <item quantity="other">%d 首</item>
    </plurals>
    <string name="add_to_favorites_completed">"成功添加到该歌单。"</string>
    <string name="add_to_favorites_failed">"添加到该歌单失败。"</string>
    <string name="action_modify_favorites">"修改歌单名称"</string>
    <string name="action_delete">"删除"</string>
    <string name="modify_name">"重命名"</string>

    <!--Playlist-->
    <string name="now_playing">"当前门店正在播放："</string>
    <string name="play_specified_item">"跳至当前项播放"</string>

    <!--About-->
    <string name="about_label">"关于我们"</string>
    <string name="action_about">"关于"</string>
    <!--Splash-->
    <string name="splash_description" translatable="false">"CopyRight"</string>

    <!--Setting-->
    <string name="cancel_login">"取消登录"</string>
    <string name="notification">"通知"</string>
    <string name="key_notification" translatable="false">key notification</string>
    <string name="notification_title">"接收消息推送"</string>
    <string name="notification_sumary">"功能还在开发中"</string>
    <string name="theme">"主题"</string>
    <string name="off">"关闭"</string>
    <string name="on">"开启"</string>
    <string name="comment_tail_summary">"开启后可以自定义"</string>
    <string name="comment_tail_title">"评论小尾巴"</string>
    <string name="modify_comment_tail_title">"设置评论小尾巴"</string>
    <string name="key_comment_tail" translatable="false">key_comment_tail</string>
    <string name="key_edit_comment_tail" translatable="false">key_edit_comment_tail</string>
    <string name="key_dark_theme" translatable="false">key_dark_theme</string>
    <string name="dark_theme_title">"夜间模式"</string>
    <string name="comment">"评论"</string>

    <string name="company_name" translatable="false">"成都心尚信息技术有限公司"</string>
    <string name="company_description" translatable="false">"    即乐由成都心尚信息技术有限公司于2018年创建。心尚公司获取正规授权歌曲，与各类线下商家紧密合作，为用户提供店铺内即时音乐点播服务。\n    心尚公司以“心之所向，行之所尚”作为公司和每位员工的行为准则，以“创造更美好的生活”为目标，致力于为用户提供更多元化的线下消费体验。"</string>
    <!--Transition name-->
    <string name="transition_album" translatable="false">transition_album</string>
</resources>
