<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notification">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_notification"
            android:persistent="true"
            android:summary="@string/notification_sumary"
            android:title="@string/notification_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/theme">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_dark_theme"
            android:persistent="true"
            android:summaryOff="@string/off"
            android:summaryOn="@string/on"
            android:title="@string/dark_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/comment">

        <SwitchPreference
            android:key="@string/key_comment_tail"
            android:persistent="true"
            android:summary="@string/comment_tail_summary"
            android:title="@string/comment_tail_title" />

        <EditTextPreference
            android:dependency="@string/key_comment_tail"
            android:key="@string/key_edit_comment_tail"
            android:persistent="true"
            android:title="@string/modify_comment_tail_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_label">

        <Preference
            android:icon="@mipmap/ic_launcher"
            android:summary="@string/company_name"
            android:title="@string/app_name">
            <intent
                android:targetClass="com.xinshang.store.about.AboutActivity"
                android:targetPackage="com.xinshang.store" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>